<resources>
    <string name="app_name">taskmaster</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="app_title">TaskMaster</string>
    <!--    <string name="second_fragment_label">Second Fragment</string>-->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_detail">Task Detail</string>
    <string name="your_username">Your Username</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="state">State:</string>
    <string name="team">Team:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="return_to_signin_form">Return to SignIn form</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="verification_code">Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="sign_out">Sign Out</string>
    <string name="upload_file">Upload File</string>
    <string name="task_image">Task Image</string>
    <string name="download_the_linked_file">Download the linked file</string>
</resources>