<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:title="@string/app_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Add Task"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/task_title"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/task_description"
            app:layout_constraintTop_toBottomOf="@+id/taskTitleLayout"
            tools:layout_editor_absoluteX="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--    <EditText-->
        <!--        android:id="@+id/textArea_information"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:background="@null"-->
        <!--        android:gravity="top|left"-->
        <!--        android:inputType="textMultiLine"-->
        <!--        android:overScrollMode="always"-->
        <!--        android:scrollbarStyle="insideInset"-->
        <!--        android:scrollbars="vertical"-->
        <!--        android:lines="6"-->
        <!--        android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--        android:scrollHorizontally="false" />-->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/spinnerState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/taskDescriptionLayout"
            tools:layout_editor_absoluteX="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/state"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/task_state_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/spinnerTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/spinnerState"
            tools:layout_editor_absoluteX="40dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/team"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/task_team_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/btnUploadFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/mybutton"
                android:text="@string/upload_file"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTeam"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/latTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="Lat: "/>
            <TextView
                android:id="@+id/lonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lon: "/>
        </LinearLayout>
        <Button
            android:id="@+id/addTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/mybutton"
            android:text="@string/add_task"
            android:textColor="@color/gray_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationLayout" />

<!--        <TextView-->
<!--            android:id="@+id/tasks_count"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:text="Total tasks: 0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/addTask" />-->
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>